# Vr-intel-edu

./: .gitignore  README.md
Godot/godot-xr-tools-demo/: demo_staging.gd.uid  demo_staging.tscn  icon.png.import  project.godot
Godot/godot-xr-tools-demo/addons/godot-xr-tools/: plugin.gd.uid  xr_tools.gd.uid
Godot/godot-xr-tools-demo/assets/ambientcg.com/: SkyOnlyHDRI023_2K-TONEMAPPED.jpg.import
Godot/godot-xr-tools-demo/assets/godot/: splash.png.import
Godot/godot-xr-tools-demo/assets/nasa/: starmap_and_constellation_figures_4k.jpg.import
Godot/godot-xr-tools-demo/assets/wahooney.itch.io/: blue_grid.png.import  brown_grid.png.import  green_grid.png.import  white_grid.png.import
Godot/godot-xr-tools-demo/scenes/: demo_scene_base.gd.uid
Godot/godot-xr-tools-demo/scenes/audio_demo/: audio_demo.png.import
Godot/godot-xr-tools-demo/scenes/basic_movement_demo/: basic movement demo.png.import
Godot/godot-xr-tools-demo/scenes/climbing_gliding_demo/: climbing_gliding_demo.png.import
Godot/godot-xr-tools-demo/scenes/footstep_movement_demo/: footstep movement demo.png.import
Godot/godot-xr-tools-demo/scenes/grappling_demo/: grappling_demo.png.import
New folder/server/: README.md  agent.py  app.py  docs.md  main.py  pyproject.toml  secrets.py
New folder/tortoise-and-hare-scene/: icon.svg.import  project.godot
New folder/tortoise-and-hare-scene/example_scenes/: tortoise_hare_forest.tscn  tutrle_walking.tscn
New folder/tortoise-and-hare-scene/scripts/: api_client.gd  story_controller.gd  story_controller.gd.uid
(+498 files in other folders)
