[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "langchain>=1.0.5",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
